--- a/src/leiningen/new/luminus/screen.css
+++ b/src/leiningen/new/luminus/screen.css
@@ -1,9 +1,41 @@
-body {
-    background-color: #fff;
-    color: #555;
+body {	
+	background-color: #fff;
+    color: #333;    
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    margin: 0;
-    text-align: center;
+    font-size: 13px;       
 }
 
+#register {
+    float: right;
+    padding-left: 10px;
+    line-height: 20px;
+    display: inline-block;
+}
+
+h1 {
+	background-color: #444;
+	color: #eee;
+}
+
+header {	
+    text-align: right;
+	border-bottom-color: #dedede;
+	border-bottom:1px solid;
+	border-color: aaa;	
+	border-bottom-style: solid;
+	padding: 15px;
+	margin-bottom: 25px;	
+}
+
+footer {
+    width:100%;
+	height:30px;
+	position:absolute;
+	bottom:0;
+	left:0;
+    padding-top: 10px;
+    text-align: center;		
+	border-color: #aaa;	
+	border-top: 1px solid;
+	border-top-style: solid;
+}
