--- a/src/leiningen/new/luminus/bootstrap/css/screen.css
+++ b/src/leiningen/new/luminus/bootstrap/css/screen.css
@@ -2,11 +2,12 @@ body {
 	background-color: #fff;
     color: #333;    
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;       
+    font-size: 13px;
+    padding: 10px;       
 }
 
 #content {
-    padding: 45px;
+    padding-top: 45px;
 }
 
 footer {
