Doctype and whitespace fixes.

--- a/src/leiningen/new/luminus/templates/base.html
+++ b/src/leiningen/new/luminus/templates/base.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Welcome to {{name}}</title>
@@ -17,7 +18,7 @@
         <div id="content">
         <h1>Welcome to {{name}}</h1>
         {% block content %}{% endblock %}
-        </div>        
+        </div>
         <footer>Copyright ...</footer>
     </body>
 </html>
