--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -1,7 +1,8 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>Welcome to {{name}}</title>
-        <link href="#%context%#/css/screen.css" rel="stylesheet" type="text/css"></link>        
+        <link href="#%context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
     </head>
     <body>
     	{% block navbar %}
@@ -31,8 +32,8 @@
                                 <input class="span2" id="pass" name="pass" placeholder="password" style="margin-right: 5px" type="password"></input>
                                 <input class="btn" type="submit" value="Login"></input>
                             </form>
-                        
-						</li>						
+
+						</li>
 						<li>
 							<a href="#%context%#/register">Register</a>
 						</li>
@@ -45,7 +46,7 @@
         <div id="content">
         <h1>Welcome to {{name}}</h1>
         {% block content %}{% endblock %}
-        </div>        
+        </div>
         <footer>Copyright ...</footer>
     </body>
 </html>
