renamed content div to container for bootstrap

--- a/src/leiningen/new/luminus/clabango/templates/base.html
+++ b/src/leiningen/new/luminus/clabango/templates/base.html
@@ -13,7 +13,7 @@
 			</ul>
 		</div>
 	</div>
-	<div id="content">
+	<div class="container">
 		<h1>Welcome to {{name}}</h1>
 		{% block content %}{% endblock %}
 	</div>
