--- a/src/leiningen/new/luminus/site/clabango/templates/base.html
+++ b/src/leiningen/new/luminus/site/clabango/templates/base.html
@@ -42,7 +42,7 @@
 			</div>
 		</div>
         {% endblock %}
-        <div id="content">
+        <div class="container">
         <h1>Welcome to {{name}}</h1>
         {% block content %}{% endblock %}
         </div>
