--- a/src/leiningen/new/luminus/bootstrap/css/screen.css
+++ b/src/leiningen/new/luminus/bootstrap/css/screen.css
@@ -1,13 +1,9 @@
 body {
+	padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
     background-color: #fff;
     color: #333;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    padding: 10px;
-}
-
-#content {
-    padding-top: 45px;
+    font-size: 13px;    
 }
 
 footer {
