--- a/src/leiningen/new/luminus/bootstrap/css/screen.css
+++ b/src/leiningen/new/luminus/bootstrap/css/screen.css
@@ -3,22 +3,37 @@ body {
     background-color: #fff;
     color: #333;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;    
+    font-size: 13px;   
+    padding-bottom: 40px;
 }
 
 footer {
-    width:100%;
-    height:30px;
-    position:absolute;
-    bottom:0;
-    left:0;
-    padding-top: 10px;
-    text-align: center;
-    border-color: #aaa;
-    border-top: 1px solid;
-    border-top-style: solid;
+    text-align: center;    
 }
 
 .error {
     color: red;
+}
+
+.sidebar-nav {
+    padding: 9px 0;
+}
+
+.sidebar-nav-fixed {
+    position:fixed;
+    top:60px;
+    width:21.97%;
+}
+
+@media (max-width: 767px) {
+    .sidebar-nav-fixed {
+        width:auto;
+    }
+}
+
+@media (max-width: 979px) {
+    .sidebar-nav-fixed {
+        position:static;
+        width: auto;
+    }
 }
