--- a/src/leiningen/new/luminus/bootstrap/css/screen.css
+++ b/src/leiningen/new/luminus/bootstrap/css/screen.css
@@ -1,39 +1,47 @@
+html,
 body {
-    padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-    background-color: #fff;
-    color: #333;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;   
-    padding-bottom: 40px;
-}
-
-footer {
-    text-align: center;    
+	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;          
+    height: 100%;    
 }
 
 .error {
     color: red;
 }
 
-.sidebar-nav {
-    padding: 9px 0;
+/*footer based on http://twitter.github.com/bootstrap/examples/sticky-footer-navbar.html */
+/* Wrapper for page content to push down footer */
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -60px;
 }
 
-.sidebar-nav-fixed {
-    position:fixed;
-    top:60px;
-    width:21.97%;
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+    height: 60px;
+}
+      
+#footer {
+    background-color: #f5f5f5;
 }
 
+/* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
-    .sidebar-nav-fixed {
-        width:auto;
+    #footer {
+          margin-left: -20px;
+          margin-right: -20px;
+          padding-left: 20px;
+          padding-right: 20px;
     }
 }
 
-@media (max-width: 979px) {
-    .sidebar-nav-fixed {
-        position:static;
-        width: auto;
-    }
+#wrap > .container,
+#wrap > .container-fluid{
+    padding-top: 60px;
+}
+.container .footer-text {
+    margin: 20px 0;
 }
