--- a/src/leiningen/new/luminus/screen.css
+++ b/src/leiningen/new/luminus/screen.css
@@ -2,7 +2,6 @@ body {
     background-color: #fff;
     color: #333;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;
 }
 
 #register {
@@ -11,8 +10,11 @@ body {
 }
 
 h1 {
-    background-color: #444;
-    color: #eee;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+	background-color: #E9E9E9;
+	border: 1px solid #CFCFCF;
+	border-radius: 4px;
 }
 
 .nav li {
@@ -27,19 +29,27 @@ h1 {
     margin-bottom: 10px;
 }
 
-#content {
-    clear: both;
+#container {
+    height: auto;
+    margin-bottom: 10px;
 }
 
-footer {
-    width:100%;
-    height:30px;
+#footer {    
+    width: 95%;
+    margin-left: 1%;
+    margin-right: 1%;
     position:absolute;
     bottom:0;
-    left:0;
-    padding-top: 10px;
+    font-size: 11px;
+    font-weight: bold;
+    height: auto;    
     text-align: center;
-    border-color: #aaa;
-    border-top: 1px solid;
-    border-top-style: solid;
+    
+	padding-top: 10px;
+	
+	-webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+	background-color: #E9E9E9;
+	border: 1px solid #CFCFCF;
+	border-radius: 4px;
 }
