updated cljs profile with an Ajax example

--- a/src/leiningen/new/luminus/templates/base.html
+++ b/src/leiningen/new/luminus/templates/base.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to {{name}}</title>
-<link href="#%context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
+	<title>Welcome to {{name}}</title>
+	<link href="#%context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
+	<script type="text/javascript">
+	var context = "#%context%#";
+	</script>
 </head>
 <body>
     <div id="wrap">
@@ -23,6 +26,6 @@
          <div class="container">                
              <p class="muted footer-text">Footer content.</p>
          </div>
-    </div>
+    </div>        
 </body>
 </html>
