--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -6,6 +6,9 @@
 		<link href="#%context%#/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"></link>
 		<link href="#%context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
 		
+		<script type="text/javascript">
+		var context = "#%context%#";
+		</script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 		<script type="text/javascript" src="#%context%#/js/bootstrap.min.js"></script>
 
