--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -9,7 +9,7 @@
 		<script type="text/javascript">
 		var context = "#%context%#";
 		</script>
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.10.0.min.js"></script>
 		<script type="text/javascript" src="#%context%#/js/bootstrap.min.js"></script>
 
 	</head>
