--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -24,7 +24,7 @@
 							<span class="icon-bar"></span> 
 							<span class="icon-bar"></span>
 						</a> 
-						<a class="brand" href="/">{{name}}</a> 
+						<a class="brand" href="#%servlet-context%#/">{{name}}</a> 
 						{% if user-id %}
 						<div class="btn-group pull-right">
 							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
