--- a/src/leiningen/new/luminus/dailycred/templates/registration.html
+++ b/src/leiningen/new/luminus/dailycred/templates/registration.html
@@ -1,7 +1,8 @@
 {% extends "{{sanitized}}/views/templates/base.html" %}
 
 {% block content %}
-		<form action="#%servlet-context%#/register" method="POST">
+		<form action="#%servlet-context%#/register" method="POST">			
+			#%antiforgery|safe%#
 			<label for="id">email</label>
 			{% if email-error %}
 			<div class="error">#%email-error%#</div>
