--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -40,6 +40,7 @@
 						<ul class="nav pull-right">	
 						<li>				
 								<form action="#%servlet-context%#/login" class="navbar-form" method="POST">
+									#%antiforgery|safe%#
 									<input class="span2" 
 									       id="id" 
 									       name="id" 
