updated to use Bootstrap 3.0

--- a/src/leiningen/new/luminus/templates/home.html
+++ b/src/leiningen/new/luminus/templates/home.html
@@ -1,17 +1,14 @@
 {% extends "{{sanitized}}/views/templates/base.html" %}
-
 {% block content %}
-
- <div class="hero-unit">
+ <div class="jumbotron">
     <h1>Welcome to {{name}}</h1>
     <p>Time to start building your site!</p>
     <p><a class="btn btn-primary btn-large" href="http://luminusweb.net">Learn more &raquo;</a></p>
  </div>
- 
+
  <div class="row-fluid">
-    <div class="span8">       
+    <div class="span8">
     #%content|safe%#
     </div>
  </div>
-
 {% endblock %}
