--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -1,83 +1,81 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Welcome to {{name}}</title>		
-		<link href="#%servlet-context%#/css/bootstrap.min.css" rel="stylesheet" type="text/css"></link>
-		<link href="#%servlet-context%#/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"></link>
-		<link href="#%servlet-context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
-		
-		<script type="text/javascript">
-		var context = "#%servlet-context%#";
-		</script>
-		<script type="text/javascript" src="//code.jquery.com/jquery-1.10.0.min.js"></script>
-		<script type="text/javascript" src="#%servlet-context%#/js/bootstrap.min.js"></script>
-
+		<title>Welcome to {{name}}</title>
 	</head>
 	<body>
-	 <div id="wrap">	
 			{% block navbar %}
-			<div class="navbar navbar-fixed-top">
-				<div class="navbar-inner">
-					<div class="container-fluid">
-						<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"> 
-							<span class="icon-bar"></span> 
-							<span class="icon-bar"></span> 
+			<div class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 							<span class="icon-bar"></span>
-						</a> 
-						<a class="brand" href="#%servlet-context%#/">{{name}}</a> 
-						{% if user-id %}
-						<div class="btn-group pull-right">
-							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-								<i class="icon-user"></i>#%user-id%#<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu">
-								<li><a href="#%servlet-context%#/profile">Profile</a></li>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button> 
+						<a class="navbar-brand" href="#%servlet-context%#/">{{name}}</a>
+					</div>
+					<div class="navbar-collapse collapse">
+					{% if user-id %}
+					<div class="btn-group pull-right">
+						<ul class="nav navbar-nav">
+							 <li class="dropdown">
+							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							 	<i class="icon-user"></i>#%user-id%# <b class="caret"></b>
+							 </a>
+							 <ul class="dropdown-menu">
+							 	<li><a href="#%servlet-context%#/profile">Profile</a></li>
 		           				<li class="divider"></li>
 								<li><a href="#%servlet-context%#/logout">Sign Out</a></li>
-							</ul>
-						</div>
-						{% else %}
-						<ul class="nav pull-right">	
-						<li>				
-								<form action="#%servlet-context%#/login" class="navbar-form" method="POST">
-									<input class="span2" 
-									       id="id" 
-									       name="id" 
-									       placeholder="user id"
-										   style="margin-right: 5px" 
-										   type="text"/>
-									 <input class="span2" 
-									        id="pass" 
-									        name="pass" 
-									        placeholder="password"
-										    style="margin-right: 5px" 
-										    type="password"/> 
-									<input class="btn" type="submit" value="Login"></input>
-								</form>
-								</li>
-								<li>
-									<a href="#%servlet-context%#/register">Register</a>
-								</li>
+							 </ul>
+							 </li>
 						</ul>
-						{% endif %}
-						<div class="nav-collapse"></div> <!--/.nav-collapse -->
+					</div>
+					{% else %}
+					<div class="btn-group pull-right">
+						<ul class="nav navbar-nav">
+							 <li class="dropdown">		
+							<form action="#%servlet-context%#/login" class="navbar-form" method="POST">
+								<input class="span2"
+									       id="id"
+									       name="id"
+									       placeholder="user id"
+										   style="margin-right: 5px"
+										   type="text"/>
+									 <input class="span2"
+									        id="pass"
+									        name="pass"
+									        placeholder="password"
+										    style="margin-right: 5px"
+										    type="password"/>
+									<input class="btn" type="submit" value="Login"></input>
+							</form>
+							</li>
+							<li>
+								<a href="#%servlet-context%#/register">Register</a>
+							</li>
+						</ul>
+					</div>
+					{% endif %}
 					</div>
 				</div>
 			</div>
 			{% endblock %}
-		
-			<div class="container-fluid">
-				{% block content %} 
+			<div class="container">
+				{% block content %}
 				{% endblock %}
 			</div>
-			 <div id="push"></div>
-		</div>
-	
-		<div id="footer">
-        	 <div class="container">                
-            	 <p class="muted footer-text">Footer content.</p>
-         	</div>
-    	</div>
-	    
+		<!-- scripts and styles -->
+        {% style "/css/bootstrap-theme.min.css" %}
+        {% style "/css/bootstrap.min.css" %}
+        {% style "/css/screen.css" %}
+        <script src="//code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
+        {% script "/js/bootstrap.min.js" %}
+        <script type="text/javascript">
+            var context = "#%servlet-context%#";
+            $(function() {
+              $("##%selected-page%#").addClass("active");
+            });
+        </script>
 	</body>
 </html>
