--- a/src/leiningen/new/luminus/templates/base.html
+++ b/src/leiningen/new/luminus/templates/base.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Welcome to {{name}}</title>	
-	<link href="#%servlet-context%#/css/screen.css" rel="stylesheet" type="text/css"></link>
-	<script type="text/javascript">
-	var context = "#%servlet-context%#";
-	</script>
-</head>
-<body>
-    <div id="wrap">
-		<div class="navbar navbar-fixed-top navbar-inverse">
-			<div class="navbar-inner">
-				<ul class="nav">
-					<li><a href="#%servlet-context%#/">Home</a></li>
-					<li><a href="#%servlet-context%#/about">About</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="container">		
-			{% block content %}{% endblock %}
-		</div>		
-	    <div id="push"></div>
-	</div>
-	<div id="footer">
-         <div class="container">                
-             <p class="muted footer-text">Footer content.</p>
-         </div>
-    </div>        
-</body>
+    <head>
+        <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <title>Welcome to {{name}}</title>
+    </head>
+    <body>
+        <!-- navbar -->
+        <div class="navbar navbar-inverse navbar-fixed-top">
+          <div class="container">
+            <div class="navbar-header">
+              <a class="navbar-brand" href="#%servlet-context%#/">{{name}}</a>
+            </div>
+            <div class="navbar-collapse collapse ">
+              <ul class="nav navbar-nav">
+                  <li id="home"><a href="#%servlet-context%#/">Home</a></li>
+                  <li id="about"><a href="#%servlet-context%#/about">About</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+            {% block content %}
+            {% endblock %}
+        </div>
+        <!-- scripts and styles -->
+        {% style "/css/bootstrap-theme.min.css" %}
+        {% style "/css/bootstrap.min.css" %}
+        {% style "/css/screen.css" %}
+        <script src="//code.jquery.com/jquery-1.10.1.min.js" type="text/javascript"></script>
+        {% script "/js/bootstrap.min.js" %}
+        <script type="text/javascript">
+            var context = "#%servlet-context%#";
+            $(function() {
+              $("##%selected-page%#").addClass("active");
+            });
+        </script>
+    </body>
 </html>
+
