improved site menu

--- a/src/leiningen/new/luminus/dailycred/templates/registration.html
+++ b/src/leiningen/new/luminus/dailycred/templates/registration.html
@@ -1,5 +1,6 @@
 {% extends "{{sanitized}}/views/templates/base.html" %}
-
+{% block menu %}
+{% endblock %}
 {% block content %}
 		<form action="#%servlet-context%#/register" method="POST">
 			<label for="id">email</label>
