--- a/src/leiningen/new/luminus/site/templates/registration.html
+++ b/src/leiningen/new/luminus/site/templates/registration.html
@@ -1,5 +1,5 @@
 {% extends "{{sanitized}}/views/templates/base.html" %}
-{% block navbar %}
+{% block menu %}
 {% endblock %}
 {% block content %}
 		<form action="#%servlet-context%#/register" method="POST">
