cleaned up template generation

--- a/src/leiningen/new/luminus/site/templates/menu.html
+++ b/src/leiningen/new/luminus/site/templates/menu.html
@@ -17,7 +17,7 @@
 	{% else %}
 	<div class="btn-group pull-right">
 		<ul class="nav navbar-nav">
-			 <li class="dropdown">		
+			 <li class="dropdown">
 				<form action="#%servlet-context%#/login" class="navbar-form" method="POST">
 					<input class="span2"
 					       id="id"
@@ -31,7 +31,7 @@
 				        placeholder="password"
 					    style="margin-right: 5px"
 					    type="password"/>
-					<input class="btn" type="submit" value="Login"></input>
+                    <input class="btn" type="submit" value="Login"/>
 				</form>
 			</li>
 			<li>
