moved HTML templates to resources

--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -15,7 +15,7 @@
           <a class="navbar-brand" href="#%servlet-context%#/">{{name}}</a>
         </div>
         {% block menu %}
-          {% include "{{sanitized}}/views/templates/menu.html" %}
+          {% include "templates/menu.html" %}
         {% endblock %}
       </div>
     </div>
