--- a/src/leiningen/new/luminus/templates/about.html
+++ b/src/leiningen/new/luminus/templates/about.html
@@ -1,4 +1,4 @@
-{% extends "{{sanitized}}/views/templates/base.html" %}
+{% extends "templates/base.html" %}
 {% block content %}
   <p>this is the story of {{name}}... work in progress</p>
 {% endblock %}
