--- a/src/leiningen/new/luminus/templates/home.html
+++ b/src/leiningen/new/luminus/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "{{sanitized}}/views/templates/base.html" %}
+{% extends "templates/base.html" %}
 {% block content %}
   <div class="jumbotron">
     <h1>Welcome to {{name}}</h1>
