--- a/src/leiningen/new/luminus/templates/base.html
+++ b/src/leiningen/new/luminus/templates/base.html
@@ -25,11 +25,13 @@
       {% endblock %}
     </div>
     <!-- scripts and styles -->
-    {% style "/css/bootstrap-theme.min.css" %}
-    {% style "/css/bootstrap.min.css" %}
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     {% style "/css/screen.css" %}
+
     <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-    {% script "/js/bootstrap.min.js" %}
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
     <script type="text/javascript">
       var context = "#%servlet-context%#";
     </script>
