Set Selmer's resource path to 'templates'

--- a/src/leiningen/new/luminus/templates/home.html
+++ b/src/leiningen/new/luminus/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "templates/base.html" %}
+{% extends "base.html" %}
 {% block content %}
   <div class="jumbotron">
     <h1>Welcome to {{name}}</h1>
