remove extra "templates/" from site and dailycred template html files

--- a/src/leiningen/new/luminus/site/templates/base.html
+++ b/src/leiningen/new/luminus/site/templates/base.html
@@ -27,7 +27,7 @@
             <a class="navbar-brand" href="#%servlet-context%#/">{{name}}</a>
         </div>
         {% block menu %}
-        {% include "templates/menu.html" %}
+        {% include "menu.html" %}
         {% endblock %}
     </div>
 </div>
