--- a/src/leiningen/new/luminus/templates/home.html
+++ b/src/leiningen/new/luminus/templates/home.html
@@ -8,7 +8,7 @@
 
   <div class="row-fluid">
     <div class="span9">
-    #%content|markdown%#
+    #%docs|markdown%#
     </div>
   </div>
 {% endblock %}
