cljs profile fixes

--- a/src/leiningen/new/luminus/cljs/templates/app.html
+++ b/src/leiningen/new/luminus/cljs/templates/app.html
@@ -14,7 +14,7 @@
       </div>
       <div class="row-fluid">
 
-        <div class="span9" id="docs">#%docs|markdown%#</div>
+        <div class="span9" id="docs">{{docs|markdown}}</div>
       </div>
       <div class="row-fluid">
         <div class="span9" id="app">
@@ -33,7 +33,7 @@
     <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript">
-        var context = "#%servlet-context%#";
+        var context = "{{servlet-context}}";
     </script>
     {% if dev %}
       <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.js"></script>
