--- a/src/leiningen/new/luminus/core/resources/templates/home.html
+++ b/src/leiningen/new/luminus/core/resources/templates/home.html
@@ -6,8 +6,8 @@
     <p><a class="btn btn-primary btn-lg" href="http://luminusweb.net">Learn more &raquo;</a></p>
   </div>
 
-  <div class="row-fluid">
-    <div class="span9">
+  <div class="row">
+    <div class="span12">
     {{docs|markdown}}
     </div>
   </div>
