--- a/src/leiningen/new/luminus/core/resources/templates/home.html
+++ b/src/leiningen/new/luminus/core/resources/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
   <div class="jumbotron">
-    <h1>Welcome to <<name>></name></h1>
+    <h1>Welcome to <<name>></h1>
     <p>Time to start building your site!</p>
     <p><a class="btn btn-primary btn-lg" href="http://luminusweb.net">Learn more &raquo;</a></p>
   </div>
