updated heroku build, fixed cljs docs

--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="span12" id="app">
           <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
-          <p>Please run <code>lein cljsbuild auto dev</code> to start the ClojureScript compiler and reload the page.</p>
+          <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
           <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
         </div>
       </div>
