updated to latest clj/cljs

--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -5,23 +5,10 @@
   </head>
   <body>
     <div id="navbar"></div>
-
-    <div class="container">
-      <div class="jumbotron">
-        <h1>Welcome to <<name>></h1>
-        <p>Time to start building your site!</p>
-        <p><a class="btn btn-primary btn-lg" href="http://luminusweb.net">Learn more &raquo;</a></p>
-      </div>
-      <div class="row">
-        <div class="span12" id="app">
-          <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
-          <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
-          <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="span12" id="docs">{{docs|markdown}}</div>
-      </div>
+    <div id="app">
+      <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
+      <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
+      <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
     </div>
 
     <!-- scripts and styles -->
@@ -29,18 +16,14 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     {% style "/css/screen.css" %}
 
-    <script src="//code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         var context = "{{servlet-context}}";
     </script>
     {% if dev %}
-      <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.js"></script>
       {% script "/js/out/goog/base.js" %}
       {% script "/js/app.js" %}
       <script type="text/javascript">goog.require("<<sanitized>>.app");</script>
     {% else %}
-      <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.11.2/react.min.js"></script>
       {% script "/js/app.js" %}
     {% endif %}
   </body>
