--- a/src/leiningen/new/luminus/core/resources/templates/error.html
+++ b/src/leiningen/new/luminus/core/resources/templates/error.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-    <style>
+    <style type="text/css">
         html {
             height: 100%;
             min-height: 100%;
