--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -6,9 +6,11 @@
   <body>
     <div id="navbar"></div>
     <div id="app">
-      <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
-      <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
-      <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
+      <div class="container">
+        <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
+        <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
+        <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
+      </div>
     </div>
 
     <!-- scripts and styles -->
