--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -29,12 +29,12 @@
       {% endblock %}
     </div>
     <!-- scripts and styles -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-theme.min.css">
     {% style "/css/screen.css" %}
 
-    <script src="//code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="/assets/jquery/jquery.min.js" type="text/javascript"></script>
+    <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
