--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -29,12 +29,12 @@
       {% endblock %}
     </div>
     <!-- scripts and styles -->
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-theme.min.css">
+    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
+    {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
     {% style "/css/screen.css" %}
 
-    <script src="/assets/jquery/jquery.min.js" type="text/javascript"></script>
-    <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    {% script "/assets/jquery/jquery.min.js" %}
+    {% script "/assets/bootstrap/js/bootstrap.min.js" %}
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
