--- a/src/leiningen/new/luminus/core/resources/templates/error.html
+++ b/src/leiningen/new/luminus/core/resources/templates/error.html
@@ -39,10 +39,14 @@
         <div class="col-lg-12">
             <div class="centering text-center">
                 <div class="text-center">
-                    <h1><span class="text-danger">Error: 500</span></h1>
+                    <h1><span class="text-danger">Error: {{code}}</span></h1>
                     <hr>
-                    <h2 class="without-margin">Something very bad has happened!</h2>
-                    <h4 class="text-danger">We've dispatched a team of highly trained gnomes to take care of the problem.</h4>
+                    {% if title %}
+                    <h2 class="without-margin">{{title}}</h2>
+                    {% endif %}
+                    {% if message %}
+                    <h4 class="text-danger">{{message}}</h4>
+                    {% endif %}
                 </div>
             </div>
         </div>
