--- a/src/leiningen/new/luminus/core/resources/templates/error.html
+++ b/src/leiningen/new/luminus/core/resources/templates/error.html
@@ -39,7 +39,7 @@
         <div class="col-lg-12">
             <div class="centering text-center">
                 <div class="text-center">
-                    <h1><span class="text-danger">Error: {{code}}</span></h1>
+                    <h1><span class="text-danger">Error: {{status}}</span></h1>
                     <hr>
                     {% if title %}
                     <h2 class="without-margin">{{title}}</h2>
