--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -1,7 +1,7 @@
 <html>
   <head>
       <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1"
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Welcome to <<name>></title>
   </head>
   <body>
@@ -18,10 +18,6 @@
     {% style "/assets/bootstrap/css/bootstrap.min.css" %}
     {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
     {% style "/css/screen.css" %}
-
-    {% script "/assets/jquery/jquery.min.js" %}
-    {% script "/assets/bootstrap/js/bootstrap.min.js" %}
-    {% script "/assets/bootstrap/js/collapse.js" %}
 
     <script type="text/javascript">
         var context = "{{servlet-context}}";
