added collapsable navbar for the default template

--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -2,26 +2,39 @@
 <html>
   <head>
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <META name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to <<name>></title>
   </head>
   <body>
-    <!-- navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="{{servlet-context}}/"><<name>></a>
-        </div>
-        <div class="navbar-collapse collapse ">
-          <ul class="nav navbar-nav">
-            <li {% ifequal page "home.html" %} class="active"{%endifequal%}>
-              <a href="{{servlet-context}}/">Home</a>
-            </li>
-            <li {% ifequal page "about.html" %} class="active"{%endifequal%}>
-              <a href="{{servlet-context}}/about">About</a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      <!-- navbar -->
+      <div id="navbar">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button class="navbar-toggle"
+                            data-target="#app-navbar"
+                            data-toggle="collapse"
+                            aria-expanded="false"
+                            aria-controls="navbar">
+                        <span class="sr-only">Toggle Navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a href="{{servlet-context}}/" class="navbar-brand"><<name>></a>
+                </div>
+                <div id="app-navbar" class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li {% ifequal page "home.html" %} class="active"{%endifequal%}>
+                        <a href="{{servlet-context}}/">Home</a>
+                        </li>
+                        <li {% ifequal page "about.html" %} class="active"{%endifequal%}>
+                        <a href="{{servlet-context}}/about">About</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </div>
 
     <div class="container">
@@ -35,6 +48,7 @@
 
     {% script "/assets/jquery/jquery.min.js" %}
     {% script "/assets/bootstrap/js/bootstrap.min.js" %}
+    {% script "/assets/bootstrap/js/collapse.js" %}
 
     <script type="text/javascript">
       var context = "{{servlet-context}}";
@@ -43,4 +57,3 @@
     {% endblock %}
   </body>
 </html>
-
