--- a/src/leiningen/new/luminus/cljs/templates/home.html
+++ b/src/leiningen/new/luminus/cljs/templates/home.html
@@ -8,9 +8,13 @@
     <div id="navbar"></div>
     <div id="app">
       <div class="container">
+        {% if dev %}
         <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
         <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
         <p>See <a href="http://www.luminusweb.net/docs/clojurescript.md">ClojureScript</a> documentation for further details.</p>
+        {% else %}
+        <div class="three-quarters-loader">Loading…</div>
+        {% endif %}
       </div>
     </div>
 
