position css at the top
To avoid the blink effect of displaying the HTML before applying the
CSS.

--- a/src/leiningen/new/luminus/core/resources/templates/base.html
+++ b/src/leiningen/new/luminus/core/resources/templates/base.html
@@ -4,6 +4,11 @@
     <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <META name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to <<name>></title>
+
+    <!-- styles -->
+    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
+    {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
+    {% style "/css/screen.css" %}
   </head>
   <body>
       <!-- navbar -->
@@ -41,11 +46,8 @@
       {% block content %}
       {% endblock %}
     </div>
-    <!-- scripts and styles -->
-    {% style "/assets/bootstrap/css/bootstrap.min.css" %}
-    {% style "/assets/bootstrap/css/bootstrap-theme.min.css" %}
-    {% style "/css/screen.css" %}
 
+    <!-- scripts -->
     {% script "/assets/jquery/jquery.min.js" %}
     {% script "/assets/bootstrap/js/bootstrap.min.js" %}
     {% script "/assets/bootstrap/js/collapse.js" %}
